<?xml version="1.0"?>
<package format="2">
  <name>mavros_base</name>
  <version>0.0.1</version>
  <description>The metapackage for the MAVROS GNC stack</description>

  <maintainer email="shalaby.mhd@gmail.com">Mohammed Shalaby</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>

  <export>

  </export>
</package>
