<?xml version="1.0"?>
<package format="2">
  <name>mavros_gnc</name>
  <version>0.0.0</version>
  <description>The mavros_gnc package</description>

  <maintainer email="shalaby@todo.todo">shalaby</maintainer>

  <license>MIT</license>

  <exec_depend>mavros_base</exec_depend>
  <!-- <exec_depend>mavros_bringup</exec_depend> -->
  <exec_depend>mavros_control</exec_depend>
  <exec_depend>mavros_guidance</exec_depend>
  <exec_depend>mavros_navigation</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <metapackage/>
  </export>
</package>
