<?xml version="1.0"?>
<package format="2">
  <name>mavros_guidance</name>
  <version>0.0.0</version>
  <description>The mavros_guidance package</description>

  <maintainer email="shalaby@todo.todo">shalaby</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>roscpp</depend>
  <depend>mavros_base</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>