<?xml version="1.0"?>
<package format="2">
  <name>mavros_navigation</name>
  <version>0.0.0</version>
  <description>The mavros_navigation package</description>

  <maintainer email="shalaby@todo.todo">shalaby</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mavros_base</depend>


  <export>

  </export>
</package>
